change type name

--- a/templates/register.html
+++ b/templates/register.html
@@ -22,15 +22,15 @@
         <div class="d-flex justify-content-center mb-3 usertype">
             <div class="form-check">
                 <input class="form-check-input mx-auto" id="positive" name="usertype" type="radio" value="positive">
-                <label class="form-check-label" for="positive">positive</label>
+                <label class="form-check-label" for="positive">ぞう</label>
             </div>
             <div class="form-check">
                 <input class="form-check-input mx-auto" id="sensitive" name="usertype" type="radio" value="sensitive">
-                <label class="form-check-label" for="sensitive">sensitive</label>
+                <label class="form-check-label" for="sensitive">くま</label>
             </div>
             <div class="form-check">
                 <input class="form-check-input mx-auto" id="negative" name="usertype" type="radio" value="negative">
-                <label class="form-check-label" for="negative">negative</label>
+                <label class="form-check-label" for="negative">うさぎ</label>
             </div>  
         </div>
         <button class="btn btn-primary" type="submit">登録</button>
